
Changes in version 2.0.1
- Fixed hanging on loading a 0 length file. Thanks to Jeff Scozzafava.
- Fixed crashing on InsertBeforeChild and InsertAfterChild. Also possibility of bad links being
  created by same function. Thanks to Frank De prins.
- Added missing licence text. Thanks to Lars Willemsens.
- Added <ctype.h> include, at the suggestion of Steve Walters.

Changes in version 2.1.0
- Yves Berquin brings us the STL switch. The forum on SourceForge, and various emails to
  me, have long debated all out STL vs. no STL at all. And now you can have it both ways.
  TinyXml will compile either way.

Changes in version 2.1.1
- Compilation warnings.

Changes in version 2.1.2
- Uneeded code is not compiled in the STL case.
- Changed headers so that STL can be turned on or off in tinyxml.h

Changes in version 2.1.3
- Fixed non-const reference in API; now uses a pointer.
- Copy constructor of TiXmlString not checking for assignment to self.
- Nimrod Cohen found a truly evil bug in the STL implementation that occurs
  when a string is converted to a c_str and then assigned to self. Search for
  STL_STRING_BUG for a full description. I'm asserting this is a Microsoft STL
  bug, since &string and string.c_str() should never be the same. Nevertheless,
  the code works around it.
- Urivan Saaib pointed out a compiler conflict, where the C headers define
  the isblank macro, which was wiping out the TiXmlString::isblank() method.
  The method was unused and has been removed.

Changes in version 2.1.4
- Reworked the entity code. Entities were not correctly surving round trip input and output.
  Will now automatically create entities for high ascii in output.

Changes in version 2.1.5 (in progress)
- Bug fix by kylotan : infinite loop on some input (tinyxmlparser.cpp rev 1.27)
- Contributed by Ivica Aracic (bytelord) : 1 new VC++ project to compile versions as static libraries (tinyxml_lib.dsp), 
  and an example usage in xmltest.dsp